flux/monitoring/iperf3/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: iperf3
  namespace: default
spec:
  selector:
    matchLabels:
      app: iperf3
  template:
    metadata:
      labels:
        app: iperf3
    spec:
      containers:
        - name: iperf3
          image: networkstatic/iperf3
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 100Mi
            limits:
          command: [ "iperf3", "-s" ]
          ports:
            - containerPort: 5201
