flux/monitoring/iperf3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf3
  namespace: default
spec:
  selector:
    app: iperf3
  ports:
    - protocol: TCP
      port: 5201
      targetPort: 5201
      nodePort: 30521
  externalTrafficPolicy: Local
