flux/monitoring/iperf3/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iperf3
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`iperf3.home`)
      kind: Rule
      services:
        - name: iperf3
          port: 80
    - match: Host(`iperf3.arlodev.co.uk`)
      kind: Rule
      services:
        - name: iperf3
          port: 80
